Final Update of PPT and Error data

--- a/Pitcher Salary Estimator.ipynb
+++ b/Pitcher Salary Estimator.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "eb34a5d2-5dca-4bf1-894f-084f4f3f0899",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "id": "4603da46-c078-4f84-9ce5-2f7f3d7ef312",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 18,
    "id": "25ef2a74-ed86-4546-a0e8-365a293cf17b",
    "metadata": {},
    "outputs": [
@@ -79,13 +79,13 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter Age:  3\n",
-      "Enter IP: 0\n",
-      "Enter ERA:  0\n",
-      "Enter WHIP:  0\n",
-      "Enter W:  0\n",
+      "Enter Age:  32\n",
+      "Enter IP: 136.2\n",
+      "Enter ERA:  3.95\n",
+      "Enter WHIP:  1.259\n",
+      "Enter W:  10\n",
       "Enter SV:  0\n",
-      "Enter WAR:  0\n"
+      "Enter WAR:  1.64\n"
      ]
     }
    ],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 19,
    "id": "ab6a0488-9ad4-4395-91e9-7684025530be",
    "metadata": {},
    "outputs": [
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Salary: $8819387.67\n"
+      "Predicted Salary: $4989686.58\n"
      ]
     }
    ],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "id": "dde5de3c-8fce-46f8-8d9a-ed5a5bca96b7",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter Real Salary:  43333333\n"
+      "Enter Real Salary:  18500000\n"
      ]
     }
    ],
@@ -164,17 +164,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 20,
    "id": "98f35bae-b92a-4887-9f10-fef26fbaf75d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "percent_difference = ((real_salary - predicted_salary) / real_salary) * 100"
+    "percent_difference = (abs(predicted_salary - real_salary) / ((predicted_salary + real_salary)/2) * 100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "id": "db778e77-2281-43a8-8fe3-13eb14cb8b5e",
    "metadata": {},
    "outputs": [
@@ -182,9 +182,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Salary: $4432796.84\n",
-      "Real Salary: $43333333.00\n",
-      "Percent Difference: 89.77%\n"
+      "Predicted Salary: $4989686.58\n",
+      "Real Salary: $18500000.00\n",
+      "Percent Difference: 115.03%\n"
      ]
     }
    ],
